--- a/11_Front_End/index.html
+++ b/11_Front_End/index.html
@@ -6,6 +6,8 @@
   <title>Customer Management System</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.7.32/sweetalert2.all.min.js"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.7.32/sweetalert2.min.css" rel="stylesheet">
   <style>
     .customer-form {
       max-width: 500px;
@@ -100,10 +102,21 @@
         success: function(response) {
           loadCustomers();
           clearForm();
-          alert(`Customer ${isEditing ? 'updated' : 'saved'} successfully!`);
+          Swal.fire({
+            icon: 'success',
+            title: 'Success!',
+            text: `Customer ${isEditing ? 'updated' : 'saved'} successfully!`,
+            timer: 2000,
+            showConfirmButton: false
+          });
         },
         error: function(xhr, status, error) {
-          alert('Error: ' + error);
+          Swal.fire({
+            icon: 'error',
+            title: 'Error!',
+            text: 'Error: ' + error,
+            confirmButtonText: 'OK'
+          });
         }
       });
     });
@@ -120,21 +133,26 @@
           $('#customerTableBody').empty();
           customers.forEach(function(customer) {
             $('#customerTableBody').append(`
-                                <tr>
-                                    <td>${customer.id}</td>
-                                    <td>${customer.name}</td>
-                                    <td>${customer.address}</td>
-                                    <td>${customer.age}</td>
-                                    <td>
-                                        <button class="btn btn-sm btn-warning btn-action" onclick="editCustomer('${customer.id}', '${customer.name}', '${customer.address}', ${customer.age})">Edit</button>
-                                        <button class="btn btn-sm btn-danger btn-action" onclick="deleteCustomer('${customer.id}')">Delete</button>
-                                    </td>
-                                </tr>
-                            `);
+              <tr>
+                <td>${customer.id}</td>
+                <td>${customer.name}</td>
+                <td>${customer.address}</td>
+                <td>${customer.age}</td>
+                <td>
+                  <button class="btn btn-sm btn-warning btn-action" onclick="editCustomer('${customer.id}', '${customer.name}', '${customer.address}', ${customer.age})">Edit</button>
+                  <button class="btn btn-sm btn-danger btn-action" onclick="deleteCustomer('${customer.id}')">Delete</button>
+                </td>
+              </tr>
+            `);
           });
         },
         error: function(xhr, status, error) {
-          alert('Error loading customers: ' + error);
+          Swal.fire({
+            icon: 'error',
+            title: 'Error!',
+            text: 'Error loading customers: ' + error,
+            confirmButtonText: 'OK'
+          });
         }
       });
     }
@@ -162,23 +180,49 @@
     };
 
     window.deleteCustomer = function(id) {
-      if (confirm('Are you sure you want to delete this customer?')) {
-        $.ajax({
-          url: `${baseUrl}/delete/${id}`,
-          type: 'DELETE',
-          success: function(response) {
-            if (response) {
-              loadCustomers();
-              alert('Customer deleted successfully!');
-            } else {
-              alert('Customer not found!');
+      Swal.fire({
+        title: 'Are you sure?',
+        text: "You won't be able to revert this!",
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        confirmButtonText: 'Yes, delete it!'
+      }).then((result) => {
+        if (result.isConfirmed) {
+          $.ajax({
+            url: `${baseUrl}/delete/${id}`,
+            type: 'DELETE',
+            success: function(response) {
+              if (response) {
+                loadCustomers();
+                Swal.fire({
+                  icon: 'success',
+                  title: 'Deleted!',
+                  text: 'Customer has been deleted.',
+                  timer: 2000,
+                  showConfirmButton: false
+                });
+              } else {
+                Swal.fire({
+                  icon: 'error',
+                  title: 'Error!',
+                  text: 'Customer not found!',
+                  confirmButtonText: 'OK'
+                });
+              }
+            },
+            error: function(xhr, status, error) {
+              Swal.fire({
+                icon: 'error',
+                title: 'Error!',
+                text: 'Error deleting customer: ' + error,
+                confirmButtonText: 'OK'
+              });
             }
-          },
-          error: function(xhr, status, error) {
-            alert('Error deleting customer: ' + error);
-          }
-        });
-      }
+          });
+        }
+      });
     };
   });
 </script>
