--- a/Spring_Boot_Frontend_14/item.html
+++ b/Spring_Boot_Frontend_14/item.html
@@ -75,7 +75,6 @@
                     </tr>
                     </thead>
                     <tbody id="itemTableBody">
-                    <!-- Item data will be populated here -->
                     </tbody>
                 </table>
             </div>
@@ -84,94 +83,107 @@
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-<script>
-    const API_URL = 'http://localhost:8080/api/v1/item';
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-    document.addEventListener('DOMContentLoaded', loadItems);
-    document.getElementById('itemForm').addEventListener('submit', handleFormSubmit);
-    document.getElementById('clearBtn').addEventListener('click', resetForm);
+<script>
+  $(document).ready(function () {
+    const baseUrl = "http://localhost:8080/api/v1/item";
+
+    loadItems();
+
+    $("#itemForm").submit(function (e) {
+      e.preventDefault();
+      const itemData = {
+        id: $("#itemId").val(),
+        description: $("#itemDescription").val(),
+        quantity: $("#itemQuantity").val(),
+        price: $("#itemPrice").val()
+      };
+
+      $.ajax({
+        url: baseUrl + "/save",
+        type: "POST",
+        contentType: "application/json",
+        data: JSON.stringify(itemData),
+        success: function () {
+          loadItems();
+          clearForm();
+          showAlert("Item saved successfully!", "success");
+        },
+        error: function (xhr) {
+          showAlert("Error: " + xhr.responseText, "error");
+        }
+      });
+    });
 
     function loadItems() {
-        fetch(`${API_URL}/getAll`)
-            .then(response => response.json())
-            .then(items => renderItemTable(items))
-            .catch(() => alert('Failed to load items.'));
+      $.ajax({
+        url: baseUrl + "/getall",
+        type: "GET",
+        success: function (response) {
+          $("#itemTableBody").empty();
+          $.each(response.data, function (index, item) {
+            let row = `<tr onclick="selectItem(${item.id}, '${item.description}', ${item.quantity}, ${item.price})">
+                                    <td>${item.id}</td>
+                                    <td>${item.description}</td>
+                                    <td>${item.quantity}</td>
+                                    <td>${item.price}</td>
+                                    <td>
+                                        <button class='btn btn-warning btn-sm' onclick='editItem(${item.id})'>Edit</button>
+                                        <button class='btn btn-danger btn-sm' onclick='deleteItem(${item.id})'>Delete</button>
+                                    </td>
+                                </tr>`;
+            $("#itemTableBody").append(row);
+          });
+        },
+        error: function (xhr) {
+          showAlert("Error loading items: " + xhr.responseText, "error");
+        }
+      });
     }
 
-    function renderItemTable(items) {
-        const tableBody = document.getElementById('itemTableBody');
-        tableBody.innerHTML = '';
-        if (items.length === 0) {
-            tableBody.innerHTML = '<tr><td colspan="5" class="text-center">No items found</td></tr>';
-            return;
-        }
-        items.forEach(item => {
-            const row = document.createElement('tr');
-            row.innerHTML = `
-                <td>${item.id}</td>
-                <td>${item.description}</td>
-                <td>${item.quantity}</td>
-                <td>${item.unitPrice}</td>
-                <td>
-                    <button class="btn btn-sm btn-warning edit-btn" data-id="${item.id}">Edit</button>
-                    <button class="btn btn-sm btn-danger delete-btn" data-id="${item.id}">Delete</button>
-                </td>
-            `;
-            tableBody.appendChild(row);
+    $("#clearBtn").click(function () {
+      clearForm();
+    });
+
+    function clearForm() {
+      $("#itemForm")[0].reset();
+      $("#itemId").prop("readonly", false);
+    }
+
+    window.deleteItem = function (id) {
+      if (confirm("Are you sure you want to delete this item?")) {
+        $.ajax({
+          url: baseUrl + "/delete/" + id,
+          type: "DELETE",
+          success: function () {
+            loadItems();
+            showAlert("Item deleted successfully!", "success");
+          },
+          error: function (xhr) {
+            showAlert("Error: " + xhr.responseText, "error");
+          }
         });
-        document.querySelectorAll('.edit-btn').forEach(btn => btn.addEventListener('click', handleEditClick));
-        document.querySelectorAll('.delete-btn').forEach(btn => btn.addEventListener('click', handleDeleteClick));
-    }
+      }
+    };
 
-    function handleFormSubmit(event) {
-        event.preventDefault();
-        const itemData = {
-            id: parseInt(document.getElementById('itemId').value),
-            description: document.getElementById('itemDescription').value,
-            quantity: parseInt(document.getElementById('itemQuantity').value),
-            unitPrice: parseFloat(document.getElementById('itemPrice').value)
-        };
-        fetch(`${API_URL}/save`, {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify(itemData)
-        })
-            .then(response => response.json())
-            .then(() => {
-                resetForm();
-                loadItems();
-                alert('Item saved successfully!');
-            })
-            .catch(() => alert('Error saving item.'));
-    }
+    window.selectItem = function (id, description, quantity, price) {
+      $("#itemId").val(id).prop("readonly", true);
+      $("#itemDescription").val(description);
+      $("#itemQuantity").val(quantity);
+      $("#itemPrice").val(price);
+    };
 
-    function handleEditClick(event) {
-        const row = event.target.closest('tr');
-        document.getElementById('itemId').value = row.cells[0].textContent;
-        document.getElementById('itemDescription').value = row.cells[1].textContent;
-        document.getElementById('itemQuantity').value = row.cells[2].textContent;
-        document.getElementById('itemPrice').value = row.cells[3].textContent;
-        document.getElementById('formTitle').textContent = 'Edit Item';
-        document.getElementById('saveBtn').textContent = 'Update Item';
+    function showAlert(message, type) {
+      let alertBox = $("#alertBox");
+      alertBox.text(message).show();
+      alertBox.removeClass().addClass("alert alert-" + (type === "success" ? "success" : "danger"));
+      setTimeout(() => {
+        alertBox.fadeOut();
+      }, 2000);
     }
+  });
 
-    function handleDeleteClick(event) {
-        const id = event.target.dataset.id;
-        if (confirm(`Are you sure you want to delete item #${id}?`)) {
-            fetch(`${API_URL}/delete/${id}`, { method: 'DELETE' })
-                .then(() => {
-                    loadItems();
-                    alert('Item deleted successfully!');
-                })
-                .catch(() => alert('Error deleting item.'));
-        }
-    }
-
-    function resetForm() {
-        document.getElementById('itemForm').reset();
-        document.getElementById('formTitle').textContent = 'Add New Item';
-        document.getElementById('saveBtn').textContent = 'Save Item';
-    }
 </script>
 </body>
 </html>
