--- a/Spring_Boot_Frontend_14/customer.html
+++ b/Spring_Boot_Frontend_14/customer.html
@@ -3,142 +3,216 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Customer Management</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <title>Customer Management System</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .container {
+      max-width: 900px;
+      margin-top: 30px;
+    }
+    .card {
+      margin-bottom: 20px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+    .btn-action {
+      margin-right: 5px;
+    }
+    .table-responsive {
+      margin-top: 20px;
+    }
+  </style>
 </head>
-<body class="container mt-5">
-<h2 class="text-center mb-4">Customer Management</h2>
+<body>
+<div class="container">
+  <h1 class="text-center mb-4">Customer Management System</h1>
 
-<form id="customerForm" class="mb-3">
-  <div class="row g-2">
-    <div class="col-md-3">
-      <input type="number" id="id" class="form-control" placeholder="Customer ID" required>
+  <!-- Customer Form Card -->
+  <div class="card">
+    <div class="card-header bg-primary text-white">
+      <h5 id="formTitle">Add New Customer</h5>
     </div>
-    <div class="col-md-4">
-      <input type="text" id="name" class="form-control" placeholder="Customer Name" required>
-    </div>
-    <div class="col-md-4">
-      <input type="text" id="address" class="form-control" placeholder="Customer Address" required>
-    </div>
-    <div class="col-md-1">
-      <button type="submit" class="btn btn-primary">Save</button>
+    <div class="card-body">
+      <form id="customerForm">
+        <input type="hidden" id="editMode" value="false">
+        <div class="mb-3">
+          <label for="id" class="form-label">Customer ID</label>
+          <input type="number" class="form-control" id="id" required>
+        </div>
+        <div class="mb-3">
+          <label for="name" class="form-label">Name</label>
+          <input type="text" class="form-control" id="name" required>
+        </div>
+        <div class="mb-3">
+          <label for="address" class="form-label">Address</label>
+          <input type="text" class="form-control" id="address" required>
+        </div>
+        <div class="d-flex justify-content-end">
+          <button type="button" id="clearBtn" class="btn btn-secondary me-2">Clear</button>
+          <button type="submit" id="saveBtn" class="btn btn-primary">Save Customer</button>
+        </div>
+      </form>
     </div>
   </div>
-</form>
 
-<button class="btn btn-success mb-3" id="loadCustomers">Load Customers</button>
+  <!-- Customer List Card -->
+  <div class="card">
+    <div class="card-header bg-info text-white">
+      <h5>Customer List</h5>
+    </div>
+    <div class="card-body">
+      <div class="table-responsive">
+        <table class="table table-striped table-hover">
+          <thead>
+          <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Address</th>
+            <th>Actions</th>
+          </tr>
+          </thead>
+          <tbody id="customerTableBody">
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
 
-<table class="table table-striped table-bordered">
-  <thead class="table-dark">
-  <tr>
-    <th>ID</th>
-    <th>Name</th>
-    <th>Address</th>
-    <th>Actions</th>
-  </tr>
-  </thead>
-  <tbody id="customerTableBody"></tbody>
-</table>
+  <div id="alertBox" class="alert" style="display: none;"></div>
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <script>
   $(document).ready(function () {
     const baseUrl = "http://localhost:8080/api/v1/customer";
 
+    // Load all customers on page load
     loadCustomers();
 
-    $("#customerForm").submit(function (event) {
-      event.preventDefault();
-      let customer = {
-        id: $("#id").val(),
+    // Handle form submission for adding/updating a customer
+    $("#customerForm").submit(function (e) {
+      e.preventDefault();
+      const isEditMode = $("#editMode").val() === "true";
+      const customerId = $("#id").val();
+
+      const customerData = {
+        id: customerId,
         name: $("#name").val(),
         address: $("#address").val()
       };
 
+      // Determine the request type (POST for add, PUT for update)
+      const requestType = isEditMode ? "PUT" : "POST";
+
       $.ajax({
-        url: baseUrl + "/save",
-        type: "POST",
+        url: baseUrl + (isEditMode ? "/update" : "/save"),
+        type: requestType,
         contentType: "application/json",
-        data: JSON.stringify(customer),
+        data: JSON.stringify(customerData),
         success: function () {
-          loadCustomers();
-          alert("Customer saved successfully!");
+          loadCustomers(); // Refresh the customer list
+          clearForm(); // Clear the form
+          showAlert(isEditMode ? "Customer updated successfully!" : "Customer saved successfully!", "success");
         },
         error: function (xhr) {
-          alert("Error: " + xhr.responseText);
+          showAlert("Error: " + xhr.responseText, "error");
         }
       });
     });
 
+    // Load all customers from the server
     function loadCustomers() {
       $.ajax({
         url: baseUrl + "/getAll",
         type: "GET",
         success: function (response) {
-          $("#customerTableBody").empty();
+          $("#customerTableBody").empty(); // Clear the table
           $.each(response.data, function (index, customer) {
             let row = `<tr>
-                          <td>${customer.id}</td>
-                          <td>${customer.name}</td>
-                          <td>${customer.address}</td>
-                          <td>
-                              <button class='btn btn-warning btn-sm' onclick='editCustomer(${customer.id})'>Edit</button>
-                              <button class='btn btn-danger btn-sm' onclick='deleteCustomer(${customer.id})'>Delete</button>
-                          </td>
+                            <td>${customer.id}</td>
+                            <td>${customer.name}</td>
+                            <td>${customer.address}</td>
+                            <td>
+                                <button class='btn btn-warning btn-sm' onclick='editCustomer(${customer.id}, event)'>Edit</button>
+                                <button class='btn btn-danger btn-sm' onclick='deleteCustomer(${customer.id})'>Delete</button>
+                            </td>
                         </tr>`;
             $("#customerTableBody").append(row);
           });
         },
         error: function (xhr) {
-          alert("Error loading customers: " + xhr.responseText);
+          showAlert("Error loading customers: " + xhr.responseText, "error");
         }
       });
     }
 
-    $("#loadCustomers").click(function () {
-      loadCustomers();
-    });
+    // Clear the form and reset to "Add New Customer" mode
+    function clearForm() {
+      $("#customerForm")[0].reset();
+      $("#id").prop("readonly", false);
+      $("#editMode").val("false");
+      $("#formTitle").text("Add New Customer");
+      $("#saveBtn").text("Save Customer");
+    }
 
+    // Delete a customer by ID
     window.deleteCustomer = function (id) {
       if (confirm("Are you sure you want to delete this customer?")) {
         $.ajax({
           url: baseUrl + "/delete/" + id,
           type: "DELETE",
           success: function () {
-            loadCustomers();
-            alert("Customer deleted successfully!");
+            loadCustomers(); // Refresh the customer list
+            showAlert("Customer deleted successfully!", "success");
           },
           error: function (xhr) {
-            alert("Error: " + xhr.responseText);
+            showAlert("Error: " + xhr.responseText, "error");
           }
         });
       }
     };
 
-    window.editCustomer = function (id) {
-      let newName = prompt("Enter new name:");
-      let newAddress = prompt("Enter new address:");
-      if (!newName || !newAddress) return;
-
-      let customer = { id, name: newName, address: newAddress };
+    // Edit a customer by ID
+    window.editCustomer = function (id, event) {
+      // Stop event propagation to prevent the row click handler from firing
+      if (event) {
+        event.stopPropagation();
+      }
 
       $.ajax({
-        url: baseUrl + "/update",
-        type: "PUT",
-        contentType: "application/json",
-        data: JSON.stringify(customer),
-        success: function () {
-          loadCustomers();
-          alert("Customer updated successfully!");
+        url: baseUrl + "/" + id,
+        type: "GET",
+        success: function (response) {
+          console.log("Response:", response); // Debugging: Log the response
+
+          // Ensure the response structure matches what you're accessing
+          const customer = response.data; // Use `response` directly if it doesn't have a `data` property
+
+          // Populate the form fields
+          $("#id").val(customer.id).prop("readonly", true);
+          $("#name").val(customer.name);
+          $("#address").val(customer.address);
+          $("#editMode").val("true");
+          $("#formTitle").text("Edit Customer");
+          $("#saveBtn").text("Update Customer");
         },
         error: function (xhr) {
-          alert("Error: " + xhr.responseText);
+          showAlert("Error: " + xhr.responseText, "error");
         }
       });
     };
+
+    // Show an alert message
+    function showAlert(message, type) {
+      let alertBox = $("#alertBox");
+      alertBox.text(message).show();
+      alertBox.removeClass().addClass("alert alert-" + (type === "success" ? "success" : "danger"));
+      setTimeout(() => {
+        alertBox.fadeOut();
+      }, 2000);
+    }
   });
 </script>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
