--- a/Spring_Boot_Frontend_14/order.html
+++ b/Spring_Boot_Frontend_14/order.html
@@ -3,97 +3,196 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Place Order</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css">
+  <title>Order Management System</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .container {
+      max-width: 900px;
+      margin-top: 30px;
+    }
+    .card {
+      margin-bottom: 20px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+    .btn-action {
+      margin-right: 5px;
+    }
+    .table-responsive {
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
 <div class="container">
-  <h1 class="mt-5">Place an Order</h1>
-  <form id="placeOrderForm">
-    <!-- Customer ID -->
-    <div class="mb-3">
-      <label for="customerId" class="form-label">Customer ID</label>
-      <input type="number" class="form-control" id="customerId" required>
+  <h1 class="text-center mb-4">Order Management System</h1>
+
+  <!-- Order Form Card -->
+  <div class="card">
+    <div class="card-header bg-primary text-white">
+      <h5 id="formTitle">Place New Order</h5>
     </div>
-
-    <div class="mb-3">
-      <label class="form-label">Order Details</label>
-      <div id="orderDetailsContainer">
-        <div class="order-detail mb-3">
-          <label for="itemId1" class="form-label">Item ID</label>
-          <input type="number" class="form-control itemId" id="itemId1" placeholder="Item ID" required>
-
-          <label for="quantity1" class="form-label">Quantity</label>
-          <input type="number" class="form-control quantity" id="quantity1" placeholder="Quantity" required>
-
-          <label for="totalPrice1" class="form-label">Total Price</label>
-          <input type="number" class="form-control totalPrice" id="totalPrice1" placeholder="Total Price" required>
+    <div class="card-body">
+      <form id="orderForm">
+        <input type="hidden" id="editMode" value="false">
+        <div class="mb-3">
+          <label for="customerId" class="form-label">Customer ID</label>
+          <input type="number" class="form-control" id="customerId" required>
         </div>
-      </div>
-      <button type="button" class="btn btn-secondary" onclick="addOrderDetail()">Add Item</button>
+        <div class="mb-3">
+          <label for="orderDate" class="form-label">Order Date</label>
+          <input type="date" class="form-control" id="orderDate" required>
+        </div>
+        <div class="mb-3">
+          <label for="itemId" class="form-label">Item ID</label>
+          <input type="number" class="form-control" id="itemId" required>
+        </div>
+        <div class="mb-3">
+          <label for="quantity" class="form-label">Quantity</label>
+          <input type="number" class="form-control" id="quantity" required>
+        </div>
+        <div class="d-flex justify-content-end">
+          <button type="button" id="clearBtn" class="btn btn-secondary me-2">Clear</button>
+          <button type="submit" id="saveBtn" class="btn btn-primary">Place Order</button>
+        </div>
+      </form>
     </div>
+  </div>
 
-    <button type="submit" class="btn btn-primary">Place Order</button>
-  </form>
+  <!-- Order List Card -->
+  <div class="card">
+    <div class="card-header bg-info text-white">
+      <h5>Order List</h5>
+    </div>
+    <div class="card-body">
+      <div class="table-responsive">
+        <table class="table table-striped table-hover">
+          <thead>
+          <tr>
+            <th>Order ID</th>
+            <th>Customer ID</th>
+            <th>Order Date</th>
+            <th>Item ID</th>
+            <th>Quantity</th>
+            <th>Total Price</th>
+            <th>Actions</th>
+          </tr>
+          </thead>
+          <tbody id="orderTableBody">
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
 
-  <div id="responseMessage" class="mt-3"></div>
+  <div id="alertBox" class="alert" style="display: none;"></div>
 </div>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 <script>
-  // Function to add more item fields for the order
-  function addOrderDetail() {
-    const orderDetailsContainer = document.getElementById('orderDetailsContainer');
-    const orderDetailTemplate = document.querySelector('.order-detail').cloneNode(true);
+  $(document).ready(function () {
+    const baseUrl = "http://localhost:8080/api/v1/order";
 
-    // Find the last index for item fields and increment it
-    const itemIndex = orderDetailsContainer.querySelectorAll('.order-detail').length + 1;
+    // Load all orders on page load
+    loadOrders();
 
-    // Update the IDs dynamically
-    orderDetailTemplate.querySelector('.itemId').id = `itemId${itemIndex}`;
-    orderDetailTemplate.querySelector('.quantity').id = `quantity${itemIndex}`;
-    orderDetailTemplate.querySelector('.totalPrice').id = `totalPrice${itemIndex}`;
+    // Handle form submission for placing an order
+    $("#orderForm").submit(function (e) {
+      e.preventDefault();
 
-    orderDetailsContainer.appendChild(orderDetailTemplate);
-  }
+      const orderData = {
+        customerId: $("#customerId").val(),
+        orderDate: $("#orderDate").val(),
+        orderDetails: [
+          {
+            itemId: $("#itemId").val(),
+            quantity: $("#quantity").val(),
+            totalPrice: 0 // Will be calculated on the server
+          }
+        ]
+      };
 
-  // Handle form submission
-  document.getElementById('placeOrderForm').addEventListener('submit', function (event) {
-    event.preventDefault();
+      console.log("Sending data:", orderData);
 
-    const customerId = document.getElementById('customerId').value;
-    const orderDetails = [];
-    const itemIds = document.querySelectorAll('.itemId');
-    const quantities = document.querySelectorAll('.quantity');
-    const totalPrices = document.querySelectorAll('.totalPrice');
-
-    itemIds.forEach((item, index) => {
-      orderDetails.push({
-        itemId: item.value,
-        quantity: quantities[index].value,
-        totalPrice: totalPrices[index].value
+      $.ajax({
+        url: baseUrl + "/place",
+        type: "POST",
+        contentType: "application/json",
+        data: JSON.stringify(orderData),
+        success: function (response) {
+          console.log("Success response:", response);
+          loadOrders();
+          clearForm();
+          showAlert("Order placed successfully!", "success");
+        },
+        error: function (xhr, status, error) {
+          console.error("Error details:", status, error);
+          console.error("Response:", xhr.responseText);
+          showAlert("Error: " + (xhr.responseText || "Unknown error occurred"), "error");
+        }
       });
     });
 
-    const orderDTO = {
-      customerId: customerId,
-      orderDetails: orderDetails
+    // Load all orders from the server
+    function loadOrders() {
+      $.ajax({
+        url: baseUrl + "/getAll",
+        type: "GET",
+        success: function (response) {
+          $("#orderTableBody").empty();
+          $.each(response.data, function (index, order) {
+            let row = `<tr>
+                       <td>${order.id}</td>
+                       <td>${order.customerId}</td>
+                       <td>${order.orderDate}</td>
+                       <td>${order.orderDetails[0].itemId}</td>
+                       <td>${order.orderDetails[0].quantity}</td>
+                       <td>${order.orderDetails[0].totalPrice}</td>
+                       <td>
+                           <button class='btn btn-danger btn-sm' onclick='deleteOrder(${order.id})'>Delete</button>
+                       </td>
+                   </tr>`;
+            $("#orderTableBody").append(row);
+          });
+        },
+        error: function (xhr) {
+          showAlert("Error loading orders: " + xhr.responseText, "error");
+        }
+      });
+    }
+
+    // Clear the form
+    function clearForm() {
+      $("#orderForm")[0].reset();
+    }
+
+    // Delete an order by ID
+    window.deleteOrder = function (id) {
+      if (confirm("Are you sure you want to delete this order?")) {
+        $.ajax({
+          url: baseUrl + "/delete/" + id,
+          type: "DELETE",
+          success: function () {
+            loadOrders();
+            showAlert("Order deleted successfully!", "success");
+          },
+          error: function (xhr) {
+            showAlert("Error: " + xhr.responseText, "error");
+          }
+        });
+      }
     };
 
-    fetch('/api/v1/orders/place', {
-      method: 'POST',
-      headers: {
-        'Content-Type': 'application/json',
-      },
-      body: JSON.stringify(orderDTO),
-    })
-      .then(response => response.json())
-      .then(data => {
-        document.getElementById('responseMessage').innerText = data.message || 'Order placed successfully!';
-        document.getElementById('placeOrderForm').reset(); // Clear the form after submission
-      })
-      .catch(error => {
-        document.getElementById('responseMessage').innerText = 'Error placing the order: ' + error;
-      });
+    // Show an alert message
+    function showAlert(message, type) {
+      let alertBox = $("#alertBox");
+      alertBox.text(message).show();
+      alertBox.removeClass().addClass("alert alert-" + (type === "success" ? "success" : "danger"));
+      setTimeout(() => {
+        alertBox.fadeOut();
+      }, 2000);
+    }
   });
 </script>
 </body>
